fix loginForm bottom overflow

--- a/UI/src/styles/SignIn.css
+++ b/UI/src/styles/SignIn.css
@@ -18,6 +18,9 @@ body {
     bottom: 0;
     top: 0;
     background-image: url('/public/images/netflix-background.jpeg');
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
   }
 
   @media screen and (max-width: 740px) {
@@ -38,12 +41,12 @@ body {
   }
   
   .loginForm {
-    min-height: 604px;
-    height: max-content;
+    /* height: calc(100vh - 110px); */
+    height: 100%;
     background-color: #000000bb;
     align-self: center;
     flex-direction: column;
-    margin: auto;
+    margin: auto;    
   } 
   
   .inputGroup {
